force-app/main/default/objects/RV_Exception__c/RV_Exception__c.object-meta.xml
<CustomObject>
    <description>This object is used in revolution app to create exception records</description>
    <label>RV_Exception</label>
    <nameField>
        <displayFormat>Exception{0}</displayFormat>
        <label>RV_Exception Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RV_Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>