force-app/main/default/objects/RV_Exception__c/fields/Callout_Req_Body__c.field-meta.xml
<CustomField>
    <fullName>Callout_Req_Body__c</fullName>
    <label>Callout Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>