force-app/main/default/objects/RV_Exception__c/fields/getFields__c.field-meta.xml
<CustomField>
    <fullName>getFields__c</fullName>
    <label>getFields</label>
    <type>TextArea</type>
</CustomField>