force-app/main/default/objects/RV_Exception__c/fields/getMessage__c.field-meta.xml
<CustomField>
    <fullName>getMessage__c</fullName>
    <label>getMessage</label>
    <type>TextArea</type>
</CustomField>