force-app/main/default/objects/RV_Exception__c/fields/gsap_Message__c.field-meta.xml
<CustomField>
    <fullName>gsap_Message__c</fullName>
    <label>gsap Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>