force-app/main/default/objects/RV_Exception__c/fields/RV_GetExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>RV_GetExceptionMessage__c</fullName>
    <description>This field is used to store the exception messages during the transaction.</description>
    <label>Get Exception Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>