force-app/main/default/objects/RV_Exception__c/fields/Rv_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Rv_Item_Number__c</fullName>
    <label>Item Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>