force-app/main/default/objects/RV_Exception__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Apex_Class__c</columns>
    <columns>Method_Name__c</columns>
    <columns>Status_Code__c</columns>
    <columns>gsap_Message__c</columns>
    <columns>RV_GetExceptionMessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>