force-app/main/default/objects/RV_Exception__c/listViews/Copy_of_all_SOM.listView-meta.xml
<ListView>
    <fullName>Copy_of_all_SOM</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Apex_Class__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status_Code__c</columns>
    <columns>getMessage__c</columns>
    <columns>gsap_Message__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Method_Name__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apex_Class__c</field>
        <operation>notEqual</operation>
        <value>Rv_ITdashboardAlert,RV_DealGSAPMulesoft</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>3/31/2023 12:00 AM</value>
    </filters>
    <label>Copy of all SOM</label>
</ListView>