force-app/main/default/objects/RV_Exception__c/listViews/Today_s_LOG.listView-meta.xml
<ListView>
    <fullName>Today_s_LOG</fullName>
    <columns>NAME</columns>
    <columns>Apex_Class__c</columns>
    <columns>Method_Name__c</columns>
    <columns>getMessage__c</columns>
    <columns>gsap_Message__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s LOG</label>
</ListView>